--- a/src/scss/prepros-6.config
+++ b/src/scss/prepros-6.config
@@ -140,6 +140,12 @@
         "core/extra/extra.scss",
         "core/topbar/notify.scss"
       ]
+    },
+    {
+      "path": "widgets/gal-card.scss",
+      "imports": [
+        "variable.scss"
+      ]
     }
   ],
   "projectView": {
@@ -184,7 +190,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7909,
+    "port": 7907,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
