--- a/src/scss/prepros-6.config
+++ b/src/scss/prepros-6.config
@@ -9,9 +9,7 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "core"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -139,12 +137,6 @@
         "core/perfect-scrollbar/perfect-scrollbar.scss",
         "core/extra/extra.scss",
         "core/topbar/notify.scss"
-      ]
-    },
-    {
-      "path": "widgets/gal-card.scss",
-      "imports": [
-        "variable.scss"
       ]
     }
   ],
