--- a/src/scss/prepros.config
+++ b/src/scss/prepros.config
@@ -118,6 +118,7 @@
           "@babel/preset-flow": false
         },
         "plugins": {
+          "@babel/plugin-proposal-class-static-block": false,
           "@babel/plugin-proposal-class-properties": false,
           "@babel/plugin-proposal-decorators": {
             "enable": false,
@@ -127,6 +128,7 @@
           },
           "@babel/plugin-proposal-export-namespace-from": false,
           "@babel/plugin-proposal-function-sent": false,
+          "@babel/plugin-proposal-logical-assignment-operators": false,
           "@babel/plugin-proposal-nullish-coalescing-operator": false,
           "@babel/plugin-proposal-numeric-separator": false,
           "@babel/plugin-proposal-optional-chaining": false,
@@ -165,6 +167,7 @@
               "@babel/preset-flow": false
             },
             "plugins": {
+              "@babel/plugin-proposal-class-static-block": false,
               "@babel/plugin-proposal-class-properties": false,
               "@babel/plugin-proposal-decorators": {
                 "enable": false,
@@ -174,6 +177,7 @@
               },
               "@babel/plugin-proposal-export-namespace-from": false,
               "@babel/plugin-proposal-function-sent": false,
+              "@babel/plugin-proposal-logical-assignment-operators": false,
               "@babel/plugin-proposal-nullish-coalescing-operator": false,
               "@babel/plugin-proposal-numeric-separator": false,
               "@babel/plugin-proposal-optional-chaining": false,
@@ -209,6 +213,7 @@
       },
       "dart-sass": {
         "indentType": "space",
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "sourceMap": false
@@ -296,6 +301,7 @@
           "properties": true,
           "pure_funcs": [],
           "pure_getters": false,
+          "reduce_funcs": true,
           "reduce_vars": true,
           "sequences": true,
           "side_effects": true,
@@ -341,6 +347,7 @@
       },
       "node-sass": {
         "indentType": "space",
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "outputStyle": "expanded",
@@ -918,7 +925,7 @@
               "enable": true
             }
           },
-          "customOutput": "E:\\github\\matrix-admin-bt4\\dist\\css\\style.min.css"
+          "customOutput": "E:\\github\\bootstrap\\matrix-admin-bt4\\dist\\css\\style.min.css"
         }
       }
     ]
